
0.9.3 (July 2 2009)
--

- Setting WebDAV v2 as default because LOCK and UNLOCK seem
  to be stable by now. -J parameter is ignored and will go away.
  [Simon Pamies]

- Fix for PROPFIND to return *all* properties
  [Cedric Krier]

- Fixed do_PUT initialisation
  [Cedric Krier]

- Added REPORT support
  [Cedric Krier]

- Added support for gzip encoding
  [Cedric Krier]

- Fix for wrong --port option
  [Martin Wendt]

- Handle paths correctly for Windows related env
  [Martin Wendt]

- Included mimetype check for files
  based on magic.py from Jason Petrone. Included
  magic.py into this package. All magic.py code
  (c) 2000 Jason Petrone. Included from
  http://www.jsnp.net/code/magic.py.
  [Joerg Friedrich, Simon Pamies]

- Status check not working when server is running
  [Joerg Friedrich]

- Fixed wrong time formatting for Last-Modified
  and creationdate (must follow RFC 822 and 3339)
  [Cedric Krier]

0.9.2 (May 11 2009)
--

- Fixed COPY, MOVE, DELETE to support locked
  resources
  [Simon Pamies]

- Fixed PROPFIND to return 404 for non existing
  objects and also reduce property bloat
  [Simon Pamies]

- Implemented fully working LOCK and UNLOCK based
  on in memory lock/token database. Now fully supports
  cadaver and Mac OS X Finder.
  [Simon Pamies]

- Fixed MKCOL answer to 201
  [Jesus Cea]

- Fixed MSIE webdav headers
  [Jesus Cea]

- Make propfind respect the depth from queries
  [Cedric Krier]

- Add ETag in the header of GET. This is needed to implement 
  GroupDAV, CardDAV and CalDAV.
  [Cedric Krier]

- Handle the "Expect 100-continue" header
  [Cedric Krier]

- Remove debug statements and remove logging
  [Cedric Krier]

- Use the Host header in baseuri if set.
  [Cedric Krier]

- Adding If-Match on PUT and DELETE
  [Cedric Krier]

0.9.1 (May 4th 2009)
--

- Restructured the structure a bit: Made server package
  a real python package. Adapted error messages. Prepared
  egg distribution.
  [Simon Pamies]
